# yahoo-email

./: .dockerignore  .gitignore  Dockerfile  README.md  auth.py  config.py  database.py  docker-compose.yml  encryption.py  imap_client.py  main.py  models.py  pyproject.toml
docs/superpowers/plans/: 2026-04-14-yahoo-alias-mail-viewer.md
docs/superpowers/specs/: 2026-04-14-yahoo-alias-mail-viewer-design.md
routers/: admin.py  mail.py
templates/: admin.html  base.html  index.html  login.html
tests/: conftest.py  test_admin.py  test_auth.py  test_encryption.py  test_imap_client.py  test_mail.py  test_main.py  test_models.py
